# pythontraining

./: .coverage  .mutmut-cache
APItest/: Dockerfile  README.md  build.sh  image_name.txt  jokes.csv  main.py  pyproject.toml  run.sh  stop.sh  util.py
APItest/tests/integration/: conftest.py
APItest/tests/unit/: test_util.py
source/: mode.py  my_functions.py  school.py  shapes.py
source/RandomExercises/: author_names.py  average.py  classroom.py  daily_transactions.py  fizzbuzz.py  service.py
source/api_requests/: api_client.py  countries.py  country.py  main.py  person.py
source/bank_account/: bank_account.py  coverage-results.yml  savings_account.py
source/cbrt/: cbrt.py
source/country_quiz/: api_client.py  countries.py  country.py  countryquizzer.py
source/data_analysis/: data_analysis.py
source/decorators/: decorators.py  using_decorators.py
source/jokes/: joke_app.py  jokes.csv  jokes.py  util.py
source/mocking_examples/: area.py
source/queue/: queue.py  queuer.py
source/random_exercises/: algorithms_1.py  ascii.py  ciphertext.py  cupcakes.py  decorators.py  donothing.py  my_functions.py  strip_harjoitus.py
source/recursion/: recursion.py
source/stack/: stack.py
source/testing_exercises/: is_adult.py  joke_app.py  person.py  shipping_fees.py  temperature_converter.py
source/to_do/: to_do_list.py
tests/: conftest.py  test_ciphertext.py  test_circle.py  test_mode.py  test_my_functions.py  test_rectangle.py  test_service.py  test_square.py
tests/RandomExercisesTest/: conftest.py  test_ciphertext.py  test_circle.py  test_classroom.py  (+6 more)
(+34 files in other folders)
