[tool.poetry]
name = "simple-joke-api"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.112.0" }

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
httpx = "^0.27.0"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true

[tool.pytest.ini_options]
pythonpath = ["."]
